# mlflow-example

./: MLproject  README.md  conda.yaml  error_metrics.py  pyproject.toml  train.py  utils.py  visualization_helpers.py
config/: xgboost_optuna.yaml  xgboost_random_search.yaml
data/: apple-sales.csv
notebooks/: tune_xgboost_random_search.ipynb  tune_xgboost_random_search.py  tune_xgboost_with_optuna.ipynb  tune_xgboost_with_optuna.py  wine_quality_example.ipynb  wine_quality_example.py
scripts/: tune_xgboost_random_search_hydra.py  tune_xgboost_with_optuna_hydra.py  wine_quality_mflow_intro.py
